5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1807_2570.log
== TEST (2019-06-06 16:35:22) 
-- CODE:
from numpy import *

x = array(eval(input("valores de x: ")))
m = sum(x)/size(x)
a=0

for g in x:
	a *= (g - m)**2
	h = abs(a)
	v = h**size(n)

print(round(v,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:35:42) 
-- CODE:
from numpy import *

x = array(eval(input("valores de x: ")))
m = sum(x)/size(x)
a=0

for g in x:
	a *= (g - m)**2
	h = abs(a)
	v = h**size(x)

print(round(v,3))
-- EXECUTION TIME:
0.94185
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
0.0
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
0.0
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:35:53) 
-- CODE:
from numpy import *

x = array(eval(input("valores de x: ")))
m = sum(x)/size(x)
a=0

for g in x:
	a *= (g - m)**2
	h = abs(a)
	v = h**size(x)

print(round(v,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:36:22) 
-- CODE:
from numpy import *

x = array(eval(input("valores de x: ")))
m = sum(x)/size(x)
a=1

for g in x:
	a *= (g - m)**2
	h = a
	v = h**size(x)

print(round(v,3))
-- EXECUTION TIME:
1.20008
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
2.070748121922855e+153
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
2.169058868214343e+56
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:36:31) 
-- CODE:
from numpy import *

x = array(eval(input("valores de x: ")))
m = sum(x)/size(x)
a=1

for g in x:
	a *= (g - m)**2
	h = abs(a)
	v = h**size(x)

print(round(v,3))
-- EXECUTION TIME:
1.08609
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
2.070748121922855e+153
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
2.169058868214343e+56
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:37:06) 
-- CODE:
from numpy import *

x = array(eval(input("valores de x: ")))
m = sum(x)/size(x)
a=1

for g in x:
	a *= (g - m)**2
	h = abs(a)
	v = h**(1/size(x))

print(round(v,3))
-- EXECUTION TIME:
1.10802
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
valores de x: 78.125
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
valores de x: 14.116
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
valores de x: 0.045
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:37:12) 
-- CODE:
from numpy import *

x = array(eval(input("valores de x: ")))
m = sum(x)/size(x)
a=1

for g in x:
	a *= (g - m)**2
	h = abs(a)
	v = h**(1/size(x))

print(round(v,3))
-- EXECUTION TIME:
1.06501
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
78.125
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
14.116
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.045
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:38:00) 
-- CODE:
from numpy import *

x = array(eval(input("valores de x: ")))
m = sum(x)/size(x)
a=1

for g in x:
	a *= (g - m)**2
	h = a
	v = h**(1/size(x))

v = abs(v)
print(round(v,3))
-- EXECUTION TIME:
1.11024
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
78.125
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
14.116
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.045
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:38:36) 
-- CODE:
from numpy import *

x = array(eval(input("valores de x: ")))
m = sum(x)/size(x)
a=1

for g in x:
	a *= (g - m)**2
	h = a
	v = h**(1/size(x))

v = abs(v)
print(round(v,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:41:17) 
-- CODE:
from numpy import *

x = array(eval(input("valores de x: ")))
m = sum(x)/size(x)


for g in x:
	a *= (g - m)**2
	h = a
	v = h**(1/size(x))

v = abs(v)
print(round(v,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:41:19) 
-- CODE:
from numpy import *

x = array(eval(input("valores de x: ")))
m = sum(x)/size(x)


for g in x:
	a *= (g - m)**2
	h = a
	v = h**(1/size(x))

v = abs(v)
print(round(v,3))
-- EXECUTION TIME:
1.05512
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 8, in <module>
    a *= (g - m)**2
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:44:08) 
-- CODE:
from numpy import *

x = array(eval(input("valores de x: ")))
m = sum(x)/size(x)
a = 1

for g in x:
	a *= (g - m)**2
	h = a
	v = h**(1/size(x))

v = abs(v)
print(round(v,3))
-- EXECUTION TIME:
1.38011
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
78.125
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
14.116
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.045
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:46:28) 
-- CODE:
from numpy import *

x = array(eval(input("valores de x: ")))
m = sum(x)/size(x)
a = 1

for g in x:
	a = (g - m)
	h = a
	v = h**(1/size(x))

v = abs(v)
print(round(v,3))
-- EXECUTION TIME:
1.14492
-- ERROR:
/home/codebench/codes/1807/2570/main.py:10: RuntimeWarning: invalid value encountered in double_scalars
  v = h**(1/size(x))

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:46:32) 
-- CODE:
from numpy import *

x = array(eval(input("valores de x: ")))
m = sum(x)/size(x)
a = 1

for g in x:
	a *= (g - m)
	h = a
	v = h**(1/size(x))

v = abs(v)
print(round(v,3))
-- EXECUTION TIME:
1.19849
-- ERROR:
/home/codebench/codes/1807/2570/main.py:10: RuntimeWarning: invalid value encountered in double_scalars
  v = h**(1/size(x))

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:46:38) 
-- CODE:
from numpy import *

x = array(eval(input("valores de x: ")))
m = sum(x)/size(x)
a = 1

for g in x:
	a *= (g - m)
	h = a
	v = h**(1/size(x))

v = abs(v)
print(round(v,3))
-- EXECUTION TIME:
1.22895
-- ERROR:
/home/codebench/codes/1807/2570/main.py:10: RuntimeWarning: invalid value encountered in double_scalars
  v = h**(1/size(x))

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:47:04) 
-- CODE:
from numpy import *

x = array(eval(input("valores de x: ")))
m = sum(x)/size(x)
a = 1

for g in x:
	a *= (x - m)
	h = a
	v = h**(1/size(x))

v = abs(v)
print(round(v,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:47:10) 
-- CODE:
from numpy import *

x = array(eval(input("valores de x: ")))
m = sum(x)/size(x)
a = 1

for g in x:
	a *= (x - m)
	h = a
	v = h**(1/size(x))

v = abs(v)
print(round(v,3))
-- EXECUTION TIME:
1.52813
-- ERROR:
/home/codebench/codes/1807/2570/main.py:10: RuntimeWarning: invalid value encountered in power
  v = h**(1/size(x))
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 13, in <module>
    print(round(v,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:47:11) 
-- CODE:
from numpy import *

x = array(eval(input("valores de x: ")))
m = sum(x)/size(x)
a = 1

for g in x:
	a *= (x - m)
	h = a
	v = h**(1/size(x))

v = abs(v)
print(round(v,3))
-- EXECUTION TIME:
1.99391
-- ERROR:
/home/codebench/codes/1807/2570/main.py:10: RuntimeWarning: invalid value encountered in power
  v = h**(1/size(x))
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 13, in <module>
    print(round(v,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:47:19) 
-- CODE:
from numpy import *

x = array(eval(input("valores de x: ")))
m = sum(x)/size(x)
a = 1

for g in x:
	a *= (g - m)
	h = a
	v = h**(1/size(x))

v = abs(v)
print(round(v,3))
-- EXECUTION TIME:
1.02806
-- ERROR:
/home/codebench/codes/1807/2570/main.py:10: RuntimeWarning: invalid value encountered in double_scalars
  v = h**(1/size(x))

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:47:44) 
-- CODE:
from numpy import *

x = array(eval(input("valores de x: ")))
m = sum(x)/size(x)
a = 1

for g in x:
	a *= abs(g - m)
	h = a
	v = h**(1/size(x))


print(round(v,3))
-- EXECUTION TIME:
1.2753
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.212
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
